welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:14: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur)
    ^SnakeBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(estFaceMur && getDirection()==Direction.OUEST){
       ^