welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  while(!posfinale()){
    serpent()
  }
}

def posfinale():Boolean={
  if(estFaceMur && getDirection()==Direction.EST){
    gauche()
    if (estFaceMur)
    	return true
  else if(estFaceMur && getDirection()==Direction.OUEST){
    droite()
    if (estFaceMur)
    	return true
  }
  } else{
    return false
  }
}

def serpent(){
  if(!estFaceMur()){
    avance()
  } else{
    if(getDirection()==Direction.OUEST){
      droite()
      avance()
      droite()
    } else if(getDirection()==Direction.EST){
      gauche()
      avance()
      gauche()
    }
  }
}